--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
-</head>
-<body>
-    <h1>404 - Page Not Found</h1><br>
-    <p>Oops! The page you're looking for doesn't exist.</p><br>
-    <a href="/">Go to Home</a>
-</body>
-</html>
+<%- include('templates/header', { title: '404 Not Found', user: user }) %>
+<h2>404 - Page Not Found</h2>
+<p>The page you are looking for doesn't exist.</p>
+<%- include('templates/footer') %>
