--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,6 +1,8 @@
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6Z5n5E3z5V5E3z5V5E3z5V5E3z5V"
-  crossorigin="anonymous"></script>
+</div> <!-- End container -->
+<footer class="footer mt-auto py-3 bg-light">
+  <div class="container text-center">
+    <span class="text-muted">&copy; 2025 COMP2800 Assignment</span>
+  </div>
+</footer>
 </body>
 </html>
