--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,6 @@
-<%- include('templates/header', { title: '404 Not Found', user: user }) %>
-<h2>404 - Page Not Found</h2>
-<p>The page you are looking for doesn't exist.</p>
+<%- include('templates/header', { title: 'Page Not Found' }) %>
+>
+    <h1>404 - Page Not Found</h1><br>
+    <p>Oops! The page you're looking for doesn't exist.</p><br>
+    <a href="/">Go to Home</a>
 <%- include('templates/footer') %>
