--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,4 +1,12 @@
-<%- include('templates/header', { title: 'Error', user: user }) %>
-<h2>Error</h2>
-<p class="text-danger"><%= message %></p>
+<%- include('templates/header') %>
+
+<div class="container mt-5">
+  <div class="alert alert-danger" role="alert">
+    <h4 class="alert-heading">Error</h4>
+    <p><%= error %></p>
+    <hr>
+    <a href="/" class="btn btn-primary">Go Home</a>
+  </div>
+</div>
+
 <%- include('templates/footer') %>
