--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,8 +1,10 @@
-</div> <!-- End container -->
-<footer class="footer mt-auto py-3 bg-light">
-  <div class="container text-center">
-    <span class="text-muted">&copy; 2025 COMP2800 Assignment</span>
+
+<footer class="bg-light text-center text-lg-start mt-5">
+  <div class="text-center p-3">
+    © <%= new Date().getFullYear() %> My Web App
   </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH6MT0hFwZ94ZR5eQfZvZRnYc2CeaJxqCD9w7A6gt12J7apGg2DlP" crossorigin="anonymous"></script>
 </body>
 </html>
