--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -3,27 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title><%= title %></title>
+  <title><%= title || "My Web App" %></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">MySite</a>
+    <a class="navbar-brand" href="/">My Web App</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
-        <% if (user) { %>
+        <% if (typeof user !== 'undefined') { %>
           <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>
-          <% if (user.type === 'admin') { %>
+          <% if (user.user_type === 'admin') { %>
             <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
           <% } %>
           <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
         <% } else { %>
           <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="/signup">Signup</a></li>
+          <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
         <% } %>
       </ul>
     </div>
   </div>
 </nav>
-<div class="container">
