Changed error in error.ejs, login.ejs, signup.ejs to errorMessage, as it is in app.js, to fix 500

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,7 +3,7 @@
 <div class="container mt-5">
   <div class="alert alert-danger" role="alert">
     <h4 class="alert-heading">Error</h4>
-    <p><%= error %></p>
+    <p><%= errorMessage %></p>
     <hr>
     <a href="/" class="btn btn-primary">Go Home</a>
   </div>
