--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,8 +2,8 @@
 
 <div class="container mt-5">
   <h2>Sign Up</h2>
-  <% if (error) { %>
-    <div class="alert alert-danger"><%= error %></div>
+  <% if (errorMessage) { %>
+    <div class="alert alert-danger"><%= errorMessage %></div>
   <% } %>
   <form action="/signup" method="POST" class="mt-3">
     <div class="mb-3">
