--- a/views/members.ejs
+++ b/views/members.ejs
@@ -8,13 +8,13 @@
 
   <div class="row mt-4">
     <div class="col-md-4">
-      <img src="/images/img1.jpg" alt="Image 1" class="img-fluid rounded shadow-sm">
+      <img src="/img1.jpg" alt="Image 1" class="img-fluid rounded shadow-sm">
     </div>
     <div class="col-md-4">
-      <img src="/images/img2.jpg" alt="Image 2" class="img-fluid rounded shadow-sm">
+      <img src="/img2.jpg" alt="Image 2" class="img-fluid rounded shadow-sm">
     </div>
     <div class="col-md-4">
-      <img src="/images/img3.jpg" alt="Image 3" class="img-fluid rounded shadow-sm">
+      <img src="/img3.jpg" alt="Image 3" class="img-fluid rounded shadow-sm">
     </div>
   </div>
 </div>
