--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,10 +1,11 @@
+</main>
 
-<footer class="bg-light text-center text-lg-start mt-5">
-  <div class="text-center p-3">
-    © <%= new Date().getFullYear() %> My Web App
+<footer class="bg-dark text-white text-center py-3 mt-5">
+  <div class="container-fluid">
+    <p class="mb-0">&copy; <%= new Date().getFullYear() %> My Web App</p>
   </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH6MT0hFwZ94ZR5eQfZvZRnYc2CeaJxqCD9w7A6gt12J7apGg2DlP" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
