--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,9 +1,9 @@
-<%- include('templates/header') %>
+<%- include('templates/header', { title }) %>
 
 <div class="container mt-5 text-center">
-  <h1 class="display-4 text-danger">403 - Forbidden</h1>
-  <p class="lead">You are not authorized to access this page.</p>
-  <a href="/" class="btn btn-primary mt-3">Return to Home</a>
+  <h1 class="display-4 text-danger">404 - Page Not Found</h1>
+  <p class="lead">Oops! The page you're looking for doesn't exist.</p>
+  <a href="/" class="btn btn-primary mt-3">Return Home</a>
 </div>
 
 <%- include('templates/footer') %>
