--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -16,7 +16,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <% if (typeof user !== 'undefined' && user) { %>
+          <% if (user) { %>
             <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>
             <% if (user.user_type === 'admin') { %>
               <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
