--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,34 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title><%= title || "My Web App" %></title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">My Web App</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <% if (user) { %>
-            <li class="nav-item"><a class="nav-link" href="/members">Members</a></li>
-            <% if (user.user_type === 'admin') { %>
-              <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
-            <% } %>
-            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-          <% } else { %>
-            <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-            <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
-          <% } %>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<header class="navbar navbar-expand-lg navbar-light bg-light px-3">
+  <a class="navbar-brand" href="/">My Web App</a>
 
-  <main class="container mt-4">
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <% if (authenticated) { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/members">Members</a>
+        </li>
+        <% if (user && user.user_type === 'admin') { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin">Admin</a>
+          </li>
+        <% } %>
+      <% } %>
+    </ul>
+
+    <ul class="navbar-nav ms-auto">
+      <% if (authenticated) { %>
+        <li class="nav-item">
+          <span class="navbar-text">Hello, <%= user.name %></span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+      <% } else { %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Sign Up</a>
+        </li>
+      <% } %>
+    </ul>
+  </div>
+</header>
