--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('templates/header', { title: 'Home' }) %>
 
 <% if (authenticated) { %>
-    <h2>Hello, <%= username %>!</h2><br>
+    <h2>Hello, <%= username %>!</h2><br><br>
     <a href="/members" class="btn btn-primary mt-3">Go to Members Page</a><br>
 
     <% if (user && user.user_type === 'admin') { %>
@@ -9,8 +9,8 @@
     <% } %>
 
 <% } else { %>
-<h2>Welcome to our site!</h2><br>
-    <a href="/login" class="btn btn-primary">Login</a><br>
+<h2>Welcome to my awesome site!</h2><br>
+    <a href="/login" class="btn btn-primary">Log In</a><br><br>
     <a href="/signup" class="btn btn-primary">Sign Up</a>
 <% } %>
 
